--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,4 +10,5 @@ server.port=8084
 security.jwt.expiration=30
 security.jwt.sign-key=n2r5u7x!A%D*G-KaPdSgVkYp3s6v9y/B?E(H+MbQeThWmZq4t7w!z%C&F)J@NcRf
 
+logging.level.io.swagger.models.parameters.AbstractSerializableParameter=error
 
