--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.hibernate.jdbc.lob.non_contextual_creation=true
 server.error.include-stacktrace=on_trace_param
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/project_react
+spring.datasource.url=jdbc:postgresql://localhost:5432/usability_db
 spring.datasource.username=postgres
 spring.datasource.password=banco123
 spring.jpa.hibernate.ddl-auto=update
