--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,18 @@ security.jwt.sign-key=n2r5u7x!A%D*G-KaPdSgVkYp3s6v9y/B?E(H+MbQeThWmZq4t7w!z%C&F)
 
 logging.level.io.swagger.models.parameters.AbstractSerializableParameter=error
 
+###### Email Properties ######
+spring.mail.host = email-smtp.sa-east-1.amazonaws.com
+spring.mail.port = 587
+spring.mail.properties.mail.smtp.starttls.enable = true
+spring.mail.username = AKIAVEETHJ3RMC46IWUI
+spring.mail.password = BCa7g75XoKPoH65Pu8CL8u5CMDaXH4kjdyBAOOFryVVk
+spring.mail.properties.mail.smtp.starttls.required = true
+spring.mail.properties.mail.smtp.auth = true
+spring.mail.properties.mail.smtp.connectiontimeout = 5000
+spring.mail.properties.mail.smtp.timeout = 5000
+spring.mail.properties.mail.smtp.writetimeout = 5000
+
 aws.access_key_id=
 aws.secret_access_key=
 s3.bucket=cadeira-spring-react
