--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -29,6 +29,7 @@ spring:
           non_contextual_creation: true
     properties:
       hibernate:
+        dialect: org.hibernate.dialect.PostgreSQL95Dialect
         hbm2ddl:
           auto: create
         temp:
