--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>api</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <name>api</name>
-    <description>Projeto da cadeira de React</description>
+    <description>Final Paper Project</description>
 
     <repositories>
         <repository>
