--- a/pom.xml
+++ b/pom.xml
@@ -225,7 +225,7 @@
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>29.0-android</version>
+            <version>30.0-jre</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
